--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-REACT_APP_CANDY_MACHINE_ID= 5KYySP1NcnxWJnX31ASbA3uqsSmRF4wXhuTE9jxqTgTG
+REACT_APP_CANDY_MACHINE_ID= FsETvHuZBX5w2fQLLbAznpQD7BuNfZDUWrzYXzoqQuzb
 REACT_APP_SOLANA_NETWORK=devnet
 REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
 
 
 # ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
 # Spl-Token symbol to display next the price
-REACT_APP_SPL_TOKEN_TO_MINT_NAME=88
+REACT_APP_SPL_TOKEN_TO_MINT_NAME=$way
 
 # Spl-token decimals place defined on creation (default is 9)
 REACT_APP_SPL_TOKEN_TO_MINT_DECIMALS=0
