--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-REACT_APP_CANDY_MACHINE_ID= ESTD9wjL9wxe1XsFpkbKwrWmG8amjfGGxLNZsQv28LMS
+REACT_APP_CANDY_MACHINE_ID= AWgNfnDs6vb3HRqN5JybfsvYSYo9rPzbEp9judsWjtBf
 REACT_APP_SOLANA_NETWORK=devnet
 REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
 
 
 # ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
 # Spl-Token symbol to display next the price
-REACT_APP_SPL_TOKEN_TO_MINT_NAME=$way
+REACT_APP_SPL_TOKEN_TO_MINT_NAME=$SOL
 
 # Spl-token decimals place defined on creation (default is 9)
 REACT_APP_SPL_TOKEN_TO_MINT_DECIMALS=0
